# darkriscv

./: .gitattributes  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  darkriscv.core
.github/workflows/: Linux.yml
boards/: Makefile  README.md
boards/aliexpress_hpc40gbe_k420/: README.md  darksocv.mk  darksocv.ucf  darksocv.xise  darksocv.xst
boards/aliexpress_hpc40gbe_xcku040/: README.md  darksocv.xdc  darksocv.xpr
boards/avnet_microboard_lx9/: Makefile  README.md  darksocv.imp  darksocv.mk  darksocv.ucf  darksocv.ut  darksocv.xise  darksocv.xst  rtl  sim
boards/avnet_microboard_lx9/ise/: Makefile  darksocv.prj  darksocv.xise
boards/avnet_microboard_lx9/tmp/: darksocv.bit
boards/colorlighti5/: README.md  build.sh  pll_ref_25MHz.v  upload.sh
boards/colorlighti9/: build.sh  darksocv.lpf  upload.sh
boards/de10nano_cyclonev_mister/: README.md  _darkram.v  bin2mif.sh  darkriscv_de10nano.qpf  darkriscv_de10nano.qsf  darkriscv_de10nano.sdc  darkriscv_de10nano.sv  darksocv.mk  dut.v  files.qip  jtag.cdf  mem2bin.sh
boards/de10nano_cyclonev_mister/rtl/: pll.qip  pll.v  vga.v
boards/de10nano_cyclonev_mister/sys/: alsa.sv  arcade_video.v  ascal.vhd  audio_out.v  build_id.tcl  ddr_svc.sv  f2sdram_safe_terminator.sv  gamma_corr.sv  hdmi_config.sv  hps_io.v  hq2x.sv  i2c.v  i2s.v  iir_filter.v  ltc2308.sv  math.sv  mcp23009.sv  mt32pi.sv  osd.v  pll.13.qip  pll_audio.13.qip  pll_audio.qip  pll_audio.v  pll_cfg.qip  pll_cfg.v  pll_hdmi.13.qip  pll_hdmi.qip  pll_hdmi.v  pll_hdmi_adj.vhd  pll_q13.qip  pll_q17.qip  scandoubler.v  scanlines.v  sd_card.sv  sigma_delta_dac.v  spdif.v  sys.qip  sys.tcl  sys_analog.tcl  sys_dual_sdram.tcl  (+7 more)
boards/digilent_spartan3_s200/: README.md  darksocv.imp  darksocv.mk  darksocv.ucf  darksocv.ut  darksocv.xise  darksocv.xst
boards/ice40_breakout_hx8k/: README.md  build.sh  darksocv.pcf  pll.v  upload.sh
boards/lattice_brevia2_xp2/: .gitignore  README.md  build.sh  darksocv.ldf  darksocv.lpf  darksocv.mk  darksocv.tcl  darksocv1.sty  lattice_brevia2_xp2.xcf
boards/max1000_max10/: README.md  bin2mif.sh  darksocv.mk  dut.v  max1000.cdf  max1000.qpf  max1000.qsf  pll.ppf  pll.qip  pll.v  pll_bb.v  pmodbutled.v  top.v
boards/olimex_ice40hx8k/: README.md  darksocv.mk  darksocv.pcf
boards/openroad/: BUILD.bazel  README.md  constraints.sdc  constraints_darkram.sdc  darkram.v
boards/papilio_duo_logicstart/: README.md  darksocv.mk  darksocv.ucf  darksocv.xise  darksocv.xst
boards/piswords_ch34x_lx16/: README.md  darksocv.ucf  darksocv.xise
boards/piswords_rs485_lx9/: README.md  darksocv.mk  darksocv.ucf  darksocv.xise  darksocv.xst
boards/qmtech_artix7_a35/: README.md  darksocv.xdc  darksocv.xpr
boards/qmtech_cyclone10_cl016/: darksocv.csv  darksocv.qpf  darksocv.qsf  darksocv.sdc
boards/qmtech_kintex7_k325/: README.md  darksocv.mk  darksocv.ucf  darksocv.ut  darksocv.xise  darksocv.xst
boards/qmtech_sdram_lx16/: README.md  darksocv.mk  darksocv.ucf  darksocv.xise  darksocv.xst
boards/qmtech_spartan7_s15/: darksocv.xdc  darksocv.xpr
boards/scarab_minispartan6-plus_lx9/: README.md  darksocv.mk  darksocv.ucf  darksocv.xise  darksocv.xst
boards/ulx3s/: build.sh  darksocv.lpf  upload.sh
boards/xilinx_ac701_a200/: README.md  darksocv.mk  darksocv.ucf  darksocv.ut  darksocv.xise  darksocv.xst
doc/: README.md
ise/: Makefile  darkriscv.xise  darksocv.prj  darksocv.ucf  darksocv.ut  darksocv.xise  darksocv.xst
ise/board/avnet_microboard_lx9/: darksocv.ucf  darksocv.xise  darksocv.xst
ise/board/qmtech_sdram_lx16/: darksocv.xst
ise/board/xilinx_ac701_a200/: darksocv.ucf  darksocv.xise
ise/iseconfig/: darkriscv.projectmgr  darksocv.projectmgr  darksocv.xreport
rtl/: README.md  config.vh  darkbridge.v  darkcache.v  darkio.v  darkmac.v  darkpll.v  darkram.v  darkriscv.v  darksocv.v  darkspi.v  darkuart.v
rtl/lib/: mt48lc16m16a2_ctrl.v
rtl/lib/sdram/: mt48lc16m16a2_ctrl.v
rtl/lib/spi/: darksocv.gtkw  lis3dh_stub.v  spi_master.v  spi_master_bb.v
sim/: Makefile  README.md  Vdarksocv_gui.cpp  cosim.mk  darksimv.v  trace.py
soc/: darksocv.v
src/: .gitignore  Makefile  README.md  banner.c  banner.s  boot.S  boot.c  boot.s  boot_uart.s  config.mk  darksocv.data  darksocv.hex  darksocv.ld  darksocv.ld.src  darksocv.lds  darksocv.lst  darksocv.map  darksocv.mem  darksocv.ram  darksocv.ram.mem  darksocv.rom  darksocv.rom.mem  darksocv.text  hello.c  hello.s  io.c  io.s  main.c  main.s  stdio.c  stdio.s
src/badapple/: Makefile  badapple.h  badapple.txt  main.c
src/coremark/: Makefile  README.md  core_portme.c  core_portme.h  coremark.lds  ee_printf.c
src/darklibc/: Makefile  banner.c  io.c  misc.c  small.s  start.s  stdio.c  stdio.h  string.c  unistd.c  util.S  util.s
src/darkshell/: Makefile  README.md  main.c
src/darksocv/: Makefile  darksocv.lds  main.c
src/dhrystone/: Makefile  README.md  dhry.h  dhry_1.c
src/donut/: Makefile  README.md  main.c
src/include/: io.h  stdio.h
src/mandelbrot/: Makefile  main.c
src/primes/: Makefile  README.md  main.c
src/spidemo/: Makefile  README.md  SPIBB.md  main.c  ser.py
tmp/: darksocv.bit  darksocv_summary.html
(+22 files in other folders)
